--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -37,7 +37,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
         app:layout_constraintStart_toStartOf="@id/guide_start"
-        app:layout_constraintTop_toBottomOf="@id/button_start_test">
+        app:layout_constraintTop_toBottomOf="@id/button_start_encrypted_test">
 
         <TextView
             android:id="@+id/text_log"
@@ -55,25 +55,36 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size_16"
         android:gravity="center"
-        android:minLines="3"
+        android:minLines="2"
         android:padding="@dimen/size_4"
         android:text="@string/text_status_start"
-        app:layout_constraintBottom_toTopOf="@id/button_start_test"
+        app:layout_constraintBottom_toTopOf="@id/button_start_encrypted_test"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
         app:layout_constraintStart_toStartOf="@id/guide_start"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_start_test"
+        android:id="@+id/button_start_encrypted_test"
         style="@style/Button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size_16"
-        android:text="@string/button_start"
-        app:layout_constraintBottom_toTopOf="@id/scrollview"
+        android:text="@string/button_start_encrypted"
+        app:layout_constraintBottom_toTopOf="@id/button_start_clear_text_test"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
         app:layout_constraintStart_toStartOf="@id/guide_start"
         app:layout_constraintTop_toBottomOf="@id/text_title" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/button_start_clear_text_test"
+        style="@style/Button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_16"
+        android:text="@string/button_start_clear_text"
+        app:layout_constraintBottom_toTopOf="@id/scrollview"
+        app:layout_constraintEnd_toEndOf="@id/guide_end"
+        app:layout_constraintStart_toStartOf="@id/guide_start"
+        app:layout_constraintTop_toBottomOf="@id/button_start_encrypted_test" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
